exports[`Filter should render 1`] = `
<button
  aria-describedby={42}
  className="navbar-right btn btn-link"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button">
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    title={null}>
    <use
      xlinkHref="#talend-search" />
  </svg>
</button>
`;

exports[`Filter should render highlighted filter 1`] = `
<button
  aria-describedby={42}
  className="navbar-right btn btn-link"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button">
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    title={null}>
    <use
      xlinkHref="#talend-search" />
  </svg>
</button>
`;

exports[`Filter should render id if provided 1`] = `
<button
  aria-describedby={42}
  className="navbar-right btn btn-link"
  disabled={false}
  id="toolbar-filter"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button">
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    title={null}>
    <use
      xlinkHref="#talend-search" />
  </svg>
</button>
`;

exports[`Filter should render only toggle icon 1`] = `
<button
  aria-describedby={42}
  className="navbar-right btn btn-link"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button">
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    title={null}>
    <use
      xlinkHref="#talend-search" />
  </svg>
</button>
`;
